WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143296
Smart magnification gesture sometimes shoots to the middle of the page
https://bugs.webkit.org/show_bug.cgi?id=143296
Summary
Smart magnification gesture sometimes shoots to the middle of the page
Tim Horton
Reported
2015-03-31 23:55:20 PDT
Smart magnification gesture sometimes shoots to the middle of the page
Attachments
Patch
(3.32 KB, patch)
2015-03-31 23:55 PDT
,
Tim Horton
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-03-31 23:55:41 PDT
Created
attachment 249900
[details]
Patch
Tim Horton
Comment 2
2015-03-31 23:56:10 PDT
<
rdar://problem/18209280
>
Dean Jackson
Comment 3
2015-04-01 11:53:52 PDT
Comment on
attachment 249900
[details]
Patch No test?
Tim Horton
Comment 4
2015-04-01 11:58:30 PDT
(In reply to
comment #3
)
> Comment on
attachment 249900
[details]
> Patch > > No test?
Not yet :(
http://trac.webkit.org/changeset/182245
mitz
Comment 5
2015-04-01 12:15:04 PDT
Is this a regression from
r57203
?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug