Smart magnification gesture sometimes shoots to the middle of the page https://bugs.webkit.org/show_bug.cgi?id=143296 <rdar://problem/18209280>

Reviewed by Dean Jackson.

* UIProcess/mac/ViewGestureControllerMac.mm:
(WebKit::ViewGestureController::didCollectGeometryForSmartMagnificationGesture):
Constrain the target rect to the viewport, and if it had overflowed the viewport,
scroll halfway towards the gesture origin.


Canonical link: https://commits.webkit.org/161342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182245 268f45cc-cd09-0410-ab3c-d52691b4dbfc